--- a/app/src/main/res/drawable/border.xml
+++ b/app/src/main/res/drawable/border.xml
@@ -5,5 +5,5 @@
         android:radius="8dp"/>
     <stroke
         android:width="2dp"
-        android:color="@color/colorAccent"/>
+        android:color="@color/colorBackground"/>
 </shape>
