--- a/app/src/main/res/layout/activity_side_bar.xml
+++ b/app/src/main/res/layout/activity_side_bar.xml
@@ -19,10 +19,26 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="@android:color/white"
-        app:itemTextColor="@android:color/black"
-        app:itemIconTint="@color/colorBackground"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_side_bar"
-        app:menu="@menu/activity_side_bar_drawer" />
+        app:itemIconTint="@color/colorBackground"
+        app:itemTextColor="@android:color/black"
+        app:menu="@menu/activity_side_bar_drawer">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:orientation="vertical"
+            android:padding="16dp">
+
+            <TextView
+                android:id="@+id/logout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:text="Version 0.1" />
+        </LinearLayout>
+    </com.google.android.material.navigation.NavigationView>
 
 </androidx.drawerlayout.widget.DrawerLayout>
