first version 0.9 beta

--- a/app/src/main/res/layout/fragment_question_answer_list.xml
+++ b/app/src/main/res/layout/fragment_question_answer_list.xml
@@ -10,6 +10,7 @@
         android:layout_height="match_parent"
         android:groupIndicator="@drawable/expandable"
         android:layoutDirection="rtl"
+        android:background="@android:color/white"
         android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
         android:divider="@android:color/darker_gray"
         android:dividerHeight="0.5dp"/>
