--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,17 +40,20 @@
         <item name="actionMenuTextColor">@android:color/white</item>
     </style>
 
-    <style name="SCBSwitch" parent="Theme.AppCompat.DayNight">
+    <style name="SCBSwitch" parent="AppTheme">
         <!-- active thumb & track color (30% transparency) -->
-        <item name="colorControlActivated">#46bdbf</item>
+        <item name="trackTint">#063435</item>
 
         <!-- inactive thumb color -->
-        <item name="colorSwitchThumbNormal">#f1f1f1
-        </item>
+        <item name="colorSwitchThumbNormal">#D50C0C</item>
 
         <!-- inactive track color (30% transparency) -->
-        <item name="android:colorForeground">#42221f1f
-        </item>
+        <item name="android:colorForeground">#42ED0808</item>
+    </style>
+
+    <style name="PreferencesTheme">
+        <item name="android:windowBackground">@android:color/black</item>
+        <item name="android:background">#FFEAEAEA</item>
     </style>
 
 </resources>
