--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -5,12 +5,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ContactActivity">
+    tools:context="live.combatemic.ContactActivity">
 
     <fragment
         android:id="@+id/contact"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="com.example.covid_19.ContactListFragment"/>
+        android:name="live.combatemic.ContactListFragment"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
