--- a/app/src/main/res/layout/activity_you_tube.xml
+++ b/app/src/main/res/layout/activity_you_tube.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".YouTubeActivity">
+    tools:context="live.combatemic.YouTubeActivity">
 
     <ListView
         android:layout_width="match_parent"
