--- a/app/src/main/res/layout/content_privacy_scrolling.xml
+++ b/app/src/main/res/layout/content_privacy_scrolling.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".PrivacyScrollingActivity"
+    tools:context="live.combatemic.PrivacyScrollingActivity"
     tools:showIn="@layout/activity_privacy_scrolling">
 
     <TextView
