--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -13,7 +13,7 @@
         android:layout_height="0dp"
         android:layout_marginBottom="3dp"
         android:layout_weight="0.1"
-        tools:context=".MapsFragment" />
+        tools:context="live.combatemic.MapsFragment" />
 
     <fragment
         android:id="@+id/map"
@@ -22,7 +22,7 @@
         android:layout_height="0dp"
         android:layout_marginBottom="3dp"
         android:layout_weight="0.8"
-        tools:context=".MapsFragment" />
+        tools:context="live.combatemic.MapsFragment" />
 
     <Button
         android:id="@+id/mapSubmit"
