--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/video"
-        android:name="com.example.covid_19.CovidDataFragment"
+        android:name="live.combatemic.CovidDataFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_covid_data_list">
 
@@ -17,7 +17,7 @@
     </fragment>
     <fragment
         android:id="@+id/emergency"
-        android:name="com.example.covid_19.ContactListFragment"
+        android:name="live.combatemic.ContactListFragment"
         android:label="@string/menu_imp_contact"
         tools:layout="@layout/fragment_contact_list_list">
         <action
@@ -31,14 +31,14 @@
 
     <fragment
         android:id="@+id/qa"
-        android:name="com.example.covid_19.QuestionAnswerFragment"
+        android:name="live.combatemic.QuestionAnswerFragment"
         android:label="@string/menu_faq"
         tools:layout="@layout/fragment_question_answer_list">
     </fragment>
 
     <fragment
         android:id="@+id/maps"
-        android:name="com.example.covid_19.RegistrationFragment"
+        android:name="live.combatemic.RegistrationFragment"
         android:label="@string/menu_faq"
         tools:layout="@layout/fragment_registration">
     </fragment>
