--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -23,7 +23,7 @@
     <!--        app:title="@string/alert_title"-->
     <!--        app:useSimpleSummaryProvider="true" />-->
 
-    <!--    <com.example.covid_19.CustomSwitchPreference-->
+    <!--    <live.combatemic.CustomSwitchPreference-->
     <!--        android:key="switch"-->
     <!--        android:summary="@string/summary_notification"-->
     <!--        android:title="@string/title_notification"-->
@@ -82,8 +82,8 @@
             android:title="@string/title_terms"
             app:iconSpaceReserved="false">
             <intent
-                android:targetClass="com.example.covid_19.TermsScrollingActivity"
-                android:targetPackage="com.example.covid_19" />
+                android:targetClass="live.combatemic.TermsScrollingActivity"
+                android:targetPackage="live.combatemic" />
         </Preference>
 
         <Preference
@@ -91,8 +91,8 @@
             android:title="@string/title_policy"
             app:iconSpaceReserved="false">
             <intent
-                android:targetClass="com.example.covid_19.PrivacyScrollingActivity"
-                android:targetPackage="com.example.covid_19" />
+                android:targetClass="live.combatemic.PrivacyScrollingActivity"
+                android:targetPackage="live.combatemic" />
         </Preference>
     </PreferenceCategory>
 
