--- a/app/src/main/res/layout/fragment_state_details_list.xml
+++ b/app/src/main/res/layout/fragment_state_details_list.xml
@@ -49,6 +49,8 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
+    <include layout="@layout/search_bar"/>
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/pullToRefresh"
         android:layout_width="match_parent"
