--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,8 @@
         <item name="android:textColorSecondary">@android:color/black</item>
         <item name="android:fontFamily">@font/custom_font</item>
         <!--        <item name="android:windowBackground">@color/colorBackground</item>-->
+<!--        <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>-->
+        <item name="autoCompleteTextViewStyle">@color/colorBackground</item>
     </style>
 
     <style name="ToolbarColoredBackArrow" parent="AppTheme.PopupOverlay">
@@ -40,24 +42,9 @@
         <item name="actionMenuTextColor">@android:color/white</item>
     </style>
 
-    <style name="SCBSwitch" parent="AppTheme">
-        <!-- active thumb & track color (30% transparency) -->
-        <item name="android:colorControlActivated">#063435</item>
-
-        <!-- inactive thumb color -->
-        <item name="colorSwitchThumbNormal">#D50C0C</item>
-
-        <!-- inactive track color (30% transparency) -->
-        <item name="android:colorForeground">#42ED0808</item>
-    </style>
-
-    <style name="SwitchTheme" parent="Theme.AppCompat.Light">
-        <item name="colorControlActivated">@android:color/darker_gray</item>
-    </style>
-
-    <style name="PreferencesTheme">
-        <item name="android:windowBackground">@android:color/black</item>
-        <item name="android:background">#FFEAEAEA</item>
+    <style name="SwitchTheme" parent="AppTheme">
+        <item name="colorAccent">@color/colorBackground</item>
+        <item name="colorControlActivated">@color/colorBackground</item>
     </style>
 
 </resources>
