--- a/app/src/main/res/layout/preference_text.xml
+++ b/app/src/main/res/layout/preference_text.xml
@@ -16,7 +16,7 @@
             android:id="@android:id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="svhdgvshv"
+            android:text="connect with us"
             android:padding="10dp"
             android:layout_gravity="center"
             android:gravity="center"
